--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,14 @@
 steps:
-   
+- name: gcr.io/cloud-builders/gcloud
+  args:
+  - kms
+  - decrypt
+  - --ciphertext-file=secrets.txt.enc
+  - --plaintext-file=secrets.txt
+  - --location=global
+  - --keyring=TestKeyRing
+  - --key=TestKey
+
 - name: 'gcr.io/concrete-crow-244606/sonar-scanner:latest'
   args:
     - '-Dsonar.host.url=http://35.188.209.183:9000'
